CI images update

--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-23 11:15:33
+lastsearch = 2024-07-23 12:31:07
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
@@ -17,14 +17,14 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -71.4%%
+title = Bộ 1 ga chun kèm 2 vỏ gối nằm poly m6 công chúa 3d
+url = https://shopee.vn/product/7593915/46205072
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Bộ chăn ga gối Walt Disney mã BY20001
-url = https://changagoidemsonghong.com/chan-ga-goi-by20001
+match = -104.8%%
+title = Mẫu chăn ga gối trẻ em TE19 08 cotton Sông Hồng Sale -30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-te19-08
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -115,4 +115,9 @@ url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-gam-4-mon-nhap-khau-c
 match = -47.6%%
 title = Bộ Chăn Ga Gối Linen Pháp Nhuộm Miếng Cam Đỏ F18
 url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-mieng-cam-do-f18/
+
+[www.sendo.vn]
+match = -14.3%%
+title = BỘ CHĂN GA GỐI COTTON XOA MẪU HOA NHŨ TÍM
+url = https://www.sendo.vn/bo-chan-ga-goi-cotton-xoa-mau-hoa-nhu-tim-7272139.html
 
