--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-23 04:14:55
+lastsearch = 2024-07-23 12:35:20
 
 [changagoidemsonghong.com]
-match = 33.3%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
@@ -185,4 +185,9 @@ url = https://kona.com.vn/products/bo-chan-ga-go-i-tre-em-cotton-112
 match = -29.6%%
 title = 3 lưu ý không thể bỏ qua khi mua chăn ga gối nệm
 url = https://eseunvietnam.com/3-luu-y-khong-the-bo-qua-khi-mua-chan-ga-goi-nem-1
+
+[mym.com.vn]
+match = 44.4%%
+title = Bộ Drap Gối Cotton Màu - 16
+url = https://mym.com.vn/bo-drap-goi-cotton-mau-16
 
