--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-23 10:53:23
+lastsearch = 2024-07-23 12:46:41
 
 [www.youtube.com]
 match = -40.7%%
@@ -37,9 +37,9 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -55.6%%
-title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
-url = https://shopee.vn/list/chăn ga gối/đệm cưới
+match = -22.2%%
+title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
 match = -44.4%%
@@ -215,4 +215,9 @@ url = https://baomoi.com/ngay-nao-anh-re-cung-mang-nuoc-gung-cho-vo-ngam-chan-kh
 match = 25.9%%
 title = Bảo vệ gối chống thấm cotton
 url = https://demquoccuong.vn/san-pham/bao-ve-goi-chong-tham-cotton/
+
+[association-elfouad.fr]
+match = 11.1%%
+title = Nằm trên buồi anh cưỡi cực đã
+url = https://association-elfouad.fr/56096648-nua-dem-vao-phong-con-dau-xnxx.html
 
