--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-23 11:17:18
+lastsearch = 2024-07-23 12:45:40
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -50.0%%
+title = Về Hoa18
+url = https://hoa18.com/thong-tin/ve-hoa-18
 
 [www.youtube.com]
 match = -147.4%%
@@ -217,9 +217,9 @@ title = Đọc truyện Cường trích hắn này đóa kiều hoa - 18
 url = https://zingtruyen.top/chapter/cuong-trich-han-nay-doa-kieu-hoa/373120179/18/1462037769.html
 
 [www.quangninh.gov.vn]
-match = -131.6%%
-title = Khám bệnh, cấp thuốc miễn phí cho 300 gia đình chính ...
-url = https://www.quangninh.gov.vn/donvi/TXQuangYen/Trang/ChiTietTinTuc.aspx?nid=16269
+match = -152.6%%
+title = Ban Chỉ huy phòng chống thiên tai tìm kiếm cứu nạn thị xã ...
+url = https://www.quangninh.gov.vn/donvi/TXQuangYen/Trang/ChiTietTinTuc.aspx?nid=16289
 
 [daibieunhandan.vn]
 match = -36.8%%
