--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-23 06:16:24
+lastsearch = 2024-07-23 12:45:29
 
 [shopee.vn]
-match = -29.6%%
-title = Chiếu Điều Hoà Cao Su Non E-cool Mịn Decor, Bộ 3 Món ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Cao-Su-Non-E-cool-Mịn-Decor-Bộ-3-Món-Chiếu-Kèm-2-Vỏ-Gối-Nằm-Mềm-Mát-Nhiều-Hoạ-Tiết-(video-ảnh-thật)-i.92165237.16324622085
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
 match = -40.7%%
@@ -32,9 +32,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
-match = 7.4%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [chiaki.vn]
 match = -3.7%%
