--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-23 11:17:30
+lastsearch = 2024-07-23 12:51:14
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 [books.google.com]
 match = -212.5%%
 title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
-url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378kxRHev&sig=ACfU3U2XKMRgjKhumB6tDh2IYkwep1EWjQ&hl=en&sa=X&ved=2ahUKEwiL2J-Fp7yHAxUEtokEHZcDC5EQ6AF6BAggEAM
+url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378kyMNgA&sig=ACfU3U0XlTBvAtzEWJ4s7V8CW0rr-muLsw&hl=en&sa=X&ved=2ahUKEwit9Kv_u7yHAxWOFjQIHd1BAsQQ6AF6BAghEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
