--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-23 11:22:58
+lastsearch = 2024-07-23 12:53:06
 
 [shopee.vn]
-match = 48.0%%
-title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
-url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -40.0%%
+title = (2 CỬA) Mùng đỉnh vuông 1m6 x 2m cao cấp có viền chân
+url = https://munghoangphat.com/-2-cua-mung-dinh-vuong-1m6-x-2m-cao-cap-co-vien-chan.html
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
 url = https://www.mantubung.com/
 
 [manthutrang.com]
-match = -40.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = 16.0%%
+title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
+url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
 [www.diepxuan.com]
 match = 100.0%%
