--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-23 10:14:59
+lastsearch = 2024-07-23 12:52:25
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -12,9 +12,9 @@ title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = 25.0%%
+title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -27,9 +27,9 @@ title = Đệm Memory Foam Massage Kawaii Dreamland - Nệm.
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [dreamfoambedding.com]
-match = -13.0%%
-title = Mattresses - Dream Foam
-url = https://dreamfoambedding.com/collections/mattresses
+match = 25.0%%
+title = Dreamfoam Essential - Dream Foam
+url = https://dreamfoambedding.com/products/chill-memory-foam-mattress
 
 [nemgiahuy.com]
 match = 15.0%%
