--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-23 04:12:07
+lastsearch = 2024-07-23 13:20:24
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,8 +92,8 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 10 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 10
 url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = 0.0%%
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hy_AM
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,14 +182,14 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -133.3%%
-title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
-url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
+match = -226.7%%
+title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
+url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
 
 [uspharma.vn]
-match = -16.7%%
-title = Mosapride-US
-url = https://uspharma.vn/tieu-hoa--gan-mat--tieu-duong/mosapride-us/132-p136-735.aspx
+match = -20.0%%
+title = cttoren 50
+url = https://uspharma.vn/khang-sinh/cttoren-50/132-p135-715.aspx
 
 [www.ministop.vn]
 match = -26.7%%
