--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-23 12:13:56
+lastsearch = 2024-07-23 13:24:47
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
 match = -190.9%%
@@ -37,8 +37,8 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -190.9%%
-title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay
+match = -272.7%%
+title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay - Shopee
 url = https://shopee.vn/search?keyword=giường 1m
 
 [dogodelathanhhanoi.com]
