CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-23 02:31:52
+lastsearch = 2024-07-23 13:42:21
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -162.5%%
-title = LIVE CHIỀU 21.7 HỒ ĐIỆP HOA TẾT NHIỀU MÀU XẢ CHỈ ...
-url = https://www.youtube.com/watch?v=mc2aBdGmUxI
+match = -218.8%%
+title = Xúc động giây phút làm việc cuối cùng trên giường bệnh của ...
+url = https://www.youtube.com/watch?v=fPVND7mwys4
 
 [books.google.com]
 match = -231.2%%
