--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-23 12:46:21
+lastsearch = 2024-07-23 13:43:17
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=0KNcjFtCq5c
 [books.google.com]
 match = -231.2%%
 title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=YazaAAAAMAAJ&pg=RA6-PA58&lpg=RA6-PA58&dq=chieu+lac+soc+18&source=bl&ots=ChK78xwO2h&sig=ACfU3U13LntS4yGfCx45ziASF8NPxpdWxA&hl=en&sa=X&ved=2ahUKEwjPlKbzuryHAxWEHkQIHRhMCVUQ6AF6BAgcEAM
+url = https://books.google.com/books?id=YazaAAAAMAAJ&pg=RA6-PA58&lpg=RA6-PA58&dq=chieu+lac+soc+18&source=bl&ots=ChK78xzS3o&sig=ACfU3U2z5NNQ4gfXEcoIsphCsDxJkEFIAw&hl=en&sa=X&ved=2ahUKEwiorsbQx7yHAxXBE1kFHdtKD7IQ6AF6BAgfEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
