--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-23 12:46:12
+lastsearch = 2024-07-23 13:45:01
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/Names_of_Korea
 
 [www.youtube.com]
-match = -64.0%%
-title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
-url = https://www.youtube.com/watch?v=VnDxsqL5AuE
+match = -68.0%%
+title = 🇩🇪 German nee ❌ vs 🇰🇷 Korean 네 ne ✅ | Language Rant pt ...
+url = https://www.youtube.com/watch?v=bUW-Th-vPOw
 
 [www.diepxuan.com]
 match = 52.0%%
@@ -77,9 +77,9 @@ title = I'm thinking of moving to Korea but I'm not fluent in Korean. ...
 url = https://www.quora.com/Im-thinking-of-moving-to-Korea-but-Im-not-fluent-in-Korean-What-is-the-easiest-way-to-learn-the-language-rapidly
 
 [m.youtube.com]
-match = -60.0%%
-title = [ENG SUB][Korean Reaction] NINETY ONE - MEN EMES
-url = https://m.youtube.com/watch?v=Bk8l4Y6eSLg
+match = 0.0%%
+title = 
+url = https://m.youtube.com/watch?v=Uh8hRmACJm0
 
 [talktomeinkorean.com]
 match = 0.0%%
