--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-23 09:11:32
+lastsearch = 2024-07-23 13:36:12
 
 [everon.online]
 match = -7.4%%
@@ -27,24 +27,24 @@ title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
 url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
-
-[everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
-
-[everon.net.vn]
-match = 15.8%%
-title = Bộ Everon Epm-21060
-url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
-
-[sieuthidemhanquoc.com.vn]
 match = 22.2%%
 title = Bộ chăn ga gối Everon EPM-21070
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
+url = http://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
+
+[everonhn.com.vn]
+match = -18.5%%
+title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
+url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
+
+[everon.net.vn]
+match = 0.0%%
+title = Bộ Everon Ept-21045
+url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
+
+[sieuthidemhanquoc.com.vn]
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPM-21068
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21068-1525
 
 [shopee.vn]
 match = -44.4%%
