--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-23 13:20:02
+lastsearch = 2024-07-23 13:43:38
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
-url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -52.4%%
-title = Chiếu trúc giá rẻ có viền cao cấp loại tốt size 1m4
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-gia-re-co-vien-cao-cap-loai-tot-size-1m4/
+match = -76.2%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 21.1%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 50.0%%
+title = CHIẾU TRÚC | Hanoi
+url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -109.5%%
-title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
+match = -23.8%%
+title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
+url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
 
 [www.lazada.vn]
 match = -66.7%%
