--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-23 06:18:18
+lastsearch = 2024-07-23 13:43:49
 
 [demxanh.com]
-match = -18.5%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -32,9 +32,9 @@ title = Chiếu trúc hạt đen giá tốt
 url = https://thegioidemonline.com/chieu-hat-den.html
 
 [kyoryo.vn]
-match = -18.5%%
-title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
+match = 11.1%%
+title = Chiếu Tre Nekio cao cấp 160x200cm - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-nekio-cao-cap-160x200.html
 
 [thegioidemviet.vn]
 match = 3.7%%
