--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-23 10:35:24
+lastsearch = 2024-07-23 13:41:14
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-x84AZ&sig=ACfU3U1qMYKW7P8-OaUxZJGq4wXyYLplRw&hl=en&sa=X&ved=2ahUKEwjWy-HQnbyHAxV_hYkEHRVPCoUQ6AF6BAg8EAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-y95F_&sig=ACfU3U3i9g09EaNXpNakGpNvhRaMNN6xyQ&hl=en&sa=X&ved=2ahUKEwjh7_aVx7yHAxXSD1kFHWHFCN0Q6AF6BAgtEAM
 
 [ottawabraves.com]
 match = -292.3%%
