--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-23 11:19:49
+lastsearch = 2024-07-23 13:39:16
 
 [www.bible.com]
 match = -100.0%%
-title = MATHAIA 20 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.20.MIZCLBSI
+title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -182.4%%
+title = Luke 20-22 NIV - The Authority of Jesus Questioned - One
+url = https://www.biblegateway.com/passage/?search=Luke 20-22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
