--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-23 13:24:57
+lastsearch = 2024-07-23 13:48:07
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -180,4 +180,9 @@ url = https://www.express.co.uk/sport/tennis/1810815/US-Open-fans-Coco-Gauff-rea
 match = -37.5%%
 title = About Us
 url = https://www.esf-coco.com/about-us
+
+[www.cocochan118.com]
+match = 0.0%%
+title = Coco Chan
+url = https://www.cocochan118.com/
 
