--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-23 12:46:01
+lastsearch = 2024-07-23 13:49:13
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -40.0%%
-title = Đèn Trang Trí HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -120.0%%
-title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -193.3%%
+title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
+url = https://www.htlightlevel.vn/den-roi-co-5w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
