--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-23 10:52:18
+lastsearch = 2024-07-23 13:49:46
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -193.8%%
-title = Trống lục lạc kiêm gặm nướu Monona, trống bỏi cực yêu ...
-url = https://shopee.vn/Trống-lục-lạc-kiêm-gặm-nướu-Monona-trống-bỏi-cực-yêu-cho-bé-Baby-Born-shop-i.270816507.17099687990
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.thegioididong.com]
 match = -181.2%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = 12.5%%
-title = THÔNG BÁO GAMES SHOPEE
-url = https://www.facebook.com/groups/gamesshopee/?locale=vi_VN
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [baocaobang.vn]
 match = -218.8%%
