CI images update

--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-23 10:20:12
+lastsearch = 2024-07-23 14:18:13
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = 9.1%%
+title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
+url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
 
 [www.facebook.com]
 match = 36.4%%
@@ -170,4 +170,14 @@ url = https://documents1.worldbank.org/curated/pt/275041468322129992/pdf/RP6060v
 match = -86.4%%
 title = Command History, 1970. Volume 1. Sanitized - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA955379.pdf
+
+[vbpl.vn]
+match = -44.4%%
+title = Thái Bình
+url = https://vbpl.vn/thaibinh/Pages/vbpq-toanvan.aspx?ItemID=79258
+
+[thaibinh.gov.vn]
+match = 20.0%%
+title = Tiềm năng khoáng sản
+url = https://thaibinh.gov.vn/tin-tuc-su-kien/dieu-kien-tu-nhien/tiem-nang-khoang-san.html
 
