--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-23 13:49:46
+lastsearch = 2024-07-23 14:15:36
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -435,4 +435,9 @@ url = https://moitruong.net.vn/thanh-hoa-xay-ra-dong-dat-4-1-do-gay-rung-lac-man
 match = -106.2%%
 title = Trọng danh dự, nỗ lực tu dưỡng, rèn luyện
 url = https://langsontv.vn/news/451/73001/trong-danh-du-no-luc-tu-duong-ren-luyen
+
+[www.conggiao.org]
+match = -68.8%%
+title = Cách Lần Hạt Mân Côi | CôngGiáo.org
+url = https://www.conggiao.org/cach-lan-hat-man-coi/
 
