--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-23 13:24:47
+lastsearch = 2024-07-23 14:18:34
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường màu xám gần Kasson, Minnesota
+url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,8 +37,8 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -272.7%%
-title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay - Shopee
+match = -190.9%%
+title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=giường 1m
 
 [dogodelathanhhanoi.com]
