--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-23 13:43:29
+lastsearch = 2024-07-23 14:13:47
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -33.3%%
+title = Holiday Types 2024/25
+url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
 match = -233.3%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -283.3%%
-title = Krabi Jungle Tour with Hot Spring and Tiger Cave Temple
-url = https://www.tuimusement.com/uk/thailand/krabi/krabi-jungle-tour-with-hot-spring-and-tiger-cave-temple-5/e_q9r7z-d_2567-c_171/
+match = -241.7%%
+title = Things to do in South Korea: Attractions and Tours
+url = https://www.tuimusement.com/uk/south-korea/c_90/
 
 [www.dixondirectional.com]
 match = -166.7%%
