CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-23 13:42:21
+lastsearch = 2024-07-23 14:33:22
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -218.8%%
+title = Người phụ nữ nước ngoài vận chuyển 'thuê' 2,4 kg ma túy ...
+url = https://baomoi.com/nguoi-phu-nu-nuoc-ngoai-van-chuyen-thue-2-4-kg-ma-tuy-lanh-an-tu-hinh-c49707500.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -132,9 +132,9 @@ title = 'Tiểu Maldini' sắp gia nhập Arsenal là ai?
 url = https://vtcnews.vn/tieu-maldini-sap-gia-nhap-arsenal-la-ai-ar884525.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 23/07: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2307-tam-ly-than-trong-bao-trum-thi-truong-585-1210439.htm
 
 [www.dcine.vn]
 match = 20.0%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -193.8%%
-title = Chủ tịch nước Tô Lâm: Các gia đình chính sách phải luôn ...
-url = https://baochinhphu.vn/chu-tich-nuoc-to-lam-cac-gia-dinh-chinh-sach-phai-luon-duoc-huong-day-du-thanh-qua-cua-su-nghiep-doi-moi-102240722165801811.htm
+match = -212.5%%
+title = Tri ân người có công, ra mắt ngân hàng Gen liệt sĩ chưa ...
+url = https://baochinhphu.vn/tri-an-nguoi-co-cong-ra-mat-ngan-hang-gen-liet-si-chua-xac-dinh-thong-tin-102240723112757431.htm
 
 [eva.vn]
 match = -212.5%%
@@ -560,4 +560,14 @@ url = https://congly.vn/16-hy-vong-cua-the-thao-viet-nam-tai-olympic-paris-2024-
 match = -206.2%%
 title = Biến Nketiah làm vật tế thần, Arsenal tính chiêu mộ Guehi
 url = https://www.tinthethao.com.vn/bien-nketiah-lam-vat-te-than-arsenal-tinh-chieu-mo-guehi-d771023.html
+
+[vov.vn]
+match = -212.5%%
+title = Sắp xếp huyện, xã giai đoạn 2023-2025 tại Nam Định, Sóc ...
+url = https://vov.vn/chinh-tri/sap-xep-huyen-xa-giai-doan-2023-2025-tai-nam-dinh-soc-trang-va-tuyen-quang-post1109693.vov
+
+[danviet.vn]
+match = -218.8%%
+title = Bóng đá Việt Nam đang lạc lối, bị Thái Lan, Indonesia bỏ xa?
+url = https://danviet.vn/hoi-chuong-bao-dong-cho-bong-da-viet-nam-20240723085605444.htm
 
