--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-23 06:19:58
+lastsearch = 2024-07-23 14:27:44
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
