--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-23 12:14:08
+lastsearch = 2024-07-23 14:25:59
 
 [dreamland.vn]
-match = -64.0%%
-title = Cotton lụa PT08 - Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
+match = -32.0%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [demxanh.com]
 match = -24.0%%
@@ -27,9 +27,9 @@ title = 2024 今年もお盆になりました
 url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9yh.xn--p1ai/5178924fe80y
 
 [newsin.ir]
-match = -116.0%%
-title = Healthline nz jobs 1 5 mérföld hány km مواعيد محلات مول مصر في ...
-url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://xn-----7kcbchbkox0ag5apb3asrb4o.xn--p1ai/oTdAvh6fepr
+match = -76.0%%
+title = شعر عن اليوم الوطني ٩٢ The moms co review Labial ...
+url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://dwtao.ru/5826917wwwgoldenpondercomhk4fe43y
 
 [shopee.vn]
 match = 56.0%%
