--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-23 13:24:05
+lastsearch = 2024-07-23 14:28:17
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -62,9 +62,9 @@ title = Ruột Gối Nằm Everon Thư Giãn Cổ Kích Thước 45x65 ...
 url = https://www.lazada.vn/products/ruot-goi-nam-everon-thu-gian-co-kich-thuoc-45x65-giam-moi-ho-tro-co-chinh-hang-by-icon-bedding-i2132799966.html
 
 [shopee.vn]
-match = -3.4%%
-title = Ruột gối nằm K-Bedding By Everon kích thước 45x65cm
-url = https://shopee.vn/Ruột-gối-nằm-K-Bedding-By-Everon-kích-thước-45x65cm-Gòn-lông-vũ-gối-nằm-thấp-màu-ngẫu-nhiên-i.300998460.10256309789
+match = -20.7%%
+title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
+url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-16cm)-i.34660875.10533606712
 
 [www.everonqb.com]
 match = 72.4%%
