--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-23 09:44:57
+lastsearch = 2024-07-23 14:26:28
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -23,8 +23,8 @@ url = https://everonhanoi.com.vn/tam-trai-topper
 
 [everonhn.com.vn]
 match = 68.2%%
-title = Tấm trải tiện ích Everon
-url = https://everonhn.com.vn/tam-trai-tien-ich-everon
+title = Tấm trải đa năng Everon
+url = https://everonhn.com.vn/tam-trai-da-nang-everon
 
 [everonvn.com.vn]
 match = 18.2%%
@@ -52,9 +52,9 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -68.2%%
-title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
-url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
+match = -54.5%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
+url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [dailyeveron.vn]
 match = -45.5%%
@@ -63,8 +63,8 @@ url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 68.2%%
-title = Tấm Trải Đa Năng Everon
-url = https://everon.online/products/tam-trai-da-nang-everon-1
+title = Tấm Trải Tiện Ích Everon
+url = https://everon.online/products/tam-trai-tien-ich-7
 
 [everon.com.vn]
 match = -63.6%%
@@ -75,4 +75,9 @@ url = https://everon.com.vn/tam-topper-chong-tham/
 match = -36.4%%
 title = Tấm Topper là gì cùng những thông tin về nó?
 url = https://demxanh.com/tam-topper-la-gi-cung-nhung-thong-tin-ve-no.html
+
+[thegioidemviet.vn]
+match = -81.8%%
+title = ĐỆM TOPPER EVERON – Tấm Tăng Tiện Nghi Làm Mềm ...
+url = https://thegioidemviet.vn/dem-topper-everon-tam-tang-tien-nghi-lam-mem-nem/
 
