--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-23 14:20:58
+lastsearch = 2024-07-23 14:28:28
 
 [demxanh.com]
 match = -131.6%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOorBUK8hKnl2XW4pjllFj4D8kN7lPsoMKVLYQJQQ_rQMVEHyNNa4
 
 [thegioidemviet.vn]
 match = -73.7%%
@@ -107,8 +107,8 @@ title = Torrens University: du học Úc chi phí hợp lý ngành Du lịch ...
 url = https://dreamworld.edu.vn/torrens-university-du-hoc-uc-chi-phi-hop-ly-nganh-du-lich-khach-san-thiet-ke-mba-n2424.html
 
 [khanspacaocap.com]
-match = -121.1%%
-title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách Sạn ...
+match = -105.3%%
+title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách ...
 url = https://khanspacaocap.com/gap-khan-tam-trang-tri-phong-khach-san/
 
 [a-emhotels.com]
