CI images update

--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-23 12:31:07
+lastsearch = 2024-07-23 15:22:56
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun My Youth - MY18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
+match = 38.1%%
+title = Bộ ga chun LIVING - LV18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
 
 [shopee.vn]
 match = -71.4%%
@@ -22,9 +22,9 @@ title = Bộ 1 ga chun kèm 2 vỏ gối nằm poly m6 công chúa 3d
 url = https://shopee.vn/product/7593915/46205072
 
 [changagoidemsonghong.com]
-match = -104.8%%
-title = Mẫu chăn ga gối trẻ em TE19 08 cotton Sông Hồng Sale -30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-te19-08
+match = -57.1%%
+title = Bộ chăn ga gối trẻ em mã TE19-09 khuyến mại -30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = 9.5%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://songhong.info/chan-ga-goi-uc018
+match = -71.4%%
+title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
+url = https://songhong.info/chan-ga-goi-micro-dn1805
 
 [www.diepxuan.com]
 match = -33.3%%
@@ -57,9 +57,9 @@ title = Chuyên bộ, mẫu chăn ga gối đệm đẹp chính hãng Hàn ...
 url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=246&ebname=phong-ngu-chan-ga-goi&set_city=1&PageSpeed=noscript&page_no=54
 
 [demxanh.com]
-match = -42.9%%
-title = Phân phối các sản phẩm chăn ga gối lẻ ...
-url = https://demxanh.com/chan-ga-goi-le.html
+match = 28.6%%
+title = Bộ chăn ga gối lụa 6 món L6M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
 
 [dongahome.vn]
 match = -57.1%%
