--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-23 13:46:51
+lastsearch = 2024-07-23 15:21:39
 
 [burningman.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
-match = -226.7%%
-title = Microsoft account | Sign In or Create Your Account Today ...
-url = https://account.microsoft.com/account/Account
+match = -200.0%%
+title = Microsoft account | Sign In or Create Your Account Today
+url = https://account.microsoft.com/account/manage-my-account
 
 [www.regmovies.com]
 match = -113.3%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appGgWZQDXVkf
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
 
 [register.fca.org.uk]
 match = -6.7%%
