--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-23 09:48:30
+lastsearch = 2024-07-23 15:19:42
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -142.1%%
-title = Album Nhạc Thiếu Nhi Bé XUÂN MAI vui nhộn 3 giờ cho bé ...
-url = https://www.youtube.com/watch?v=ZeK4jit08Rk
+match = -168.4%%
+title = Mười trên giường | Bài hát cho trẻ em | Vần điệu trẻ | Kids Tv ...
+url = https://www.youtube.com/watch?v=B_XV01P-zOY
 
 [dochoihoangthu.com]
 match = -121.1%%
