--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-23 13:36:24
+lastsearch = 2024-07-23 15:19:19
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -128.6%%
+title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
+url = https://everonvn.com.vn/everon/615/bo-everon-es1816
 
 [www.everonqb.com]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -119.0%%
-title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
-url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
+match = -95.2%%
+title = Giảm giá Bộ chăn ga gối phủ trần bông 7 món satin
+url = https://muathongminh.vn/bo-chan-ga-goi-phu-tran-bong-7-mon-satin-p.1__7848970894__300618428
 
 [beecost.vn]
 match = -61.9%%
