--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-23 09:46:00
+lastsearch = 2024-07-23 15:24:57
 
 [shopee.vn]
 match = -216.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ SOFA TÂN CỔ ĐIỂN CĐ01 - Xuất khẩu
 url = https://nemkimcuong.vn/mienbac/vi/san-pham/bo-ghe-sofa-tan-co-dien-cd01-xuat-khau/
 
 [www.lazada.vn]
-match = -300.0%%
-title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
-url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
+match = -266.7%%
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có viền
+url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [vn.my-best.com]
 match = -233.3%%
