--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-23 09:10:19
+lastsearch = 2024-07-23 15:38:18
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = 3.2%%
-title = Đệm bông ép Dreamland bông Nano chống khuẩn
-url = https://demxanh.com/dem-bong-ep-dreamland-bong-nano-chong-khuan.html
+match = -6.5%%
+title = đệm bông ép Dreamland chống thoái hóa cột sống
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
 match = -38.7%%
@@ -42,9 +42,9 @@ title = Top 8 cửa hàng bán chăn ga gối nệm Quận 2 giá tốt, chất 
 url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-2.html
 
 [uannga.vn]
-match = 6.5%%
-title = ĐỆM OYASUMI ORIGINAL 1 TẤM dày 20cm
-url = https://uannga.vn/index.php/shops/dem/dem-oyasumi-original-1-tam-day-20cm.html
+match = 48.3%%
+title = Bộ chăn ga Phủ Dreamland TR16
+url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-chan-ga-phu-dreamland-tr16.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title = Ga chống thấm Dreamland 200x220
 url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 
 [www.facebook.com]
-match = 6.5%%
-title = Chăn ga Hoàng Hải -Forever BigC Long Biên
-url = https://www.facebook.com/photo.php?fbid=255882516539007&id=100063517804612&set=a.184664406994152&locale=az_AZ
+match = -22.6%%
+title = Furlife - Chăn Ga Gối Đệm Phương Hoàn | Hai Duong
+url = https://www.facebook.com/furlifeforbedding.phuonghoan/
 
 [www.chandemsadora.com]
 match = 17.2%%
@@ -85,4 +85,9 @@ url = https://www.youtube.com/shorts/tTOLm6vZlgM
 match = 9.7%%
 title = Bolsos playa grandes amazon [vM9c10]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn----8sbema1b6ajjbl5i.xn--p1ai/2689143coer2yys7gaaakauyze5fe43y
+
+[demviethome.vn]
+match = 19.4%%
+title = Đệm Bông Ép Dreamland Nano Chống Khuẩn
+url = https://demviethome.vn/dem-bong-ep-dreamland-nano-chong-khuan/
 
