--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-23 10:49:38
+lastsearch = 2024-07-23 15:38:07
 
 [changagoidemtamhao.com]
-match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LTT
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
+match = -10.0%%
+title = Đệm PYEODA
+url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
 match = -70.0%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -120.0%%
-title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
-url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
+match = -75.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html
 
 [www.facebook.com]
-match = -30.0%%
-title = Bong Medallada added a new photo.
-url = https://www.facebook.com/photo.php?fbid=875426837933181&set=a.420530600089476&type=3
+match = -45.0%%
+title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
+url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [shopee.vn]
 match = -70.0%%
