--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-23 13:26:13
+lastsearch = 2024-07-23 15:46:36
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Bộ ga chun chần
 url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = -17.9%%
+title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [demxanh.com]
 match = -32.1%%
@@ -43,8 +43,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
 
 [songhong.info]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22063
-url = https://songhong.info/chan-ga-goi-khong-chan-bc63
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [www.changagoidemeveron.vn]
 match = 0.0%%
