--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-23 15:39:45
+lastsearch = 2024-07-23 15:53:52
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -212.5%%
-title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
-url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378kyMNgA&sig=ACfU3U0XlTBvAtzEWJ4s7V8CW0rr-muLsw&hl=en&sa=X&ved=2ahUKEwit9Kv_u7yHAxWOFjQIHd1BAsQQ6AF6BAghEAM
+match = -100.0%%
+title = Bộ đề thi Ngữ văn Ôn vào 10 năm 2023-2024
+url = https://books.google.com/books?id=K50DEQAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=yKoQnlv2nP&sig=ACfU3U3XI6ReKRv-ZupFyr6Ohe2-4Mzn7Q&hl=en&sa=X&ved=2ahUKEwjZkq_o5LyHAxVLkYkEHbMgAKQQ6AF6BAgiEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
