--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-23 09:52:42
+lastsearch = 2024-07-23 16:36:19
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -168.8%%
-title = Thả trăn gấm quý hiếm gần 12kg về núi rừng Phú Quốc
-url = https://tuoitre.vn/video/tha-tran-gam-quy-hiem-gan-12kg-ve-nui-rung-phu-quoc-164109.htm
+match = -181.2%%
+title = Tấm thép chỏng chơ trên đường, dân sợ té ngã lọt gầm ...
+url = https://tuoitre.vn/tam-thep-chong-cho-tren-duong-dan-so-te-nga-lot-gam-container-20240723142857395.htm
 
 [www.apple.com]
 match = 0.0%%
@@ -497,9 +497,9 @@ title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay 
 url = https://vn.investing.com/news/stock-market-news/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-2186636
 
 [kinhtedothi.vn]
-match = -225.0%%
-title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
-url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
+match = -200.0%%
+title = Quản lý phổ biến phim trên mạng: chặn nguy cơ “xâm lăng ...
+url = https://kinhtedothi.vn/quan-ly-pho-bien-phim-tren-mang-chan-nguy-co-xam-lang-van-hoa.html
 
 [www.trip.com]
 match = -112.5%%
@@ -585,4 +585,19 @@ url = https://hcdc.vn/yeu-cau-bao-gia-cung-cap-bao-gia-vat-tu-tieu-hao-so-2467-n
 match = -181.2%%
 title = 16 hy vọng của Thể thao Việt Nam tại Olympic Paris 2024
 url = https://congly.vn/16-hy-vong-cua-the-thao-viet-nam-tai-olympic-paris-2024-441266.html
+
+[baobinhphuoc.com.vn]
+match = -187.5%%
+title = Khám phá showroom nội thất Phúc Hưng - An Cường tại ...
+url = https://baobinhphuoc.com.vn/news/9/160419/kham-pha-showroom-noi-that-phuc-hung-an-cuong-tai-gia-nghia
+
+[tiengchuong.chinhphu.vn]
+match = -231.2%%
+title = Đấu tranh mạnh với tội phạm ma túy trên tuyến biển miền Trung
+url = https://tiengchuong.chinhphu.vn/dau-tranh-manh-voi-toi-pham-ma-tuy-tren-tuyen-bien-mien-trung-11324072314180055.htm
+
+[antv.gov.vn]
+match = -68.8%%
+title = Xét xử đối tượng vận chuyển ma túy
+url = https://antv.gov.vn/phap-luat-3/kien-giang-ba-lan-cho-ma-tuy-thue-nhan-duoc-20-nam-tu-8FDFA73CD.html
 
