--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-23 15:18:04
+lastsearch = 2024-07-23 16:36:00
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -246.7%%
-title = Report of the Adjuntant General of the State of Illinois: ...
-url = https://books.google.com/books?id=1Q9BEAAAQBAJ&pg=PA401&lpg=PA401&dq=man+re+trang+16&source=bl&ots=FVPvG8j8KB&sig=ACfU3U1ds6Y6ad0AEfJDbVSaaDCIwZ96wA&hl=en&sa=X&ved=2ahUKEwiEpJa9grWHAxUTEVkFHRrAATcQ6AF6BAgdEAM
+match = -260.0%%
+title = Department of the Army Pamphlet - Page 153 - Google Books Result
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmyMDSPe&sig=ACfU3U0mzabqNb5BTxrsJwXq4GNSOXPu3g&hl=en&sa=X&ved=2ahUKEwi_vuOd7ryHAxWrEFkFHcu4CF0Q6AF6BAgiEAM
 
 [www.nolo.com]
 match = 0.0%%
