--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-23 12:33:50
+lastsearch = 2024-07-23 16:34:31
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -18.2%%
-title = NEM Fashion
-url = https://www.facebook.com/nemfashion.official/
+match = -116.7%%
+title = 65k/ phên nem nướng kèm chấm xuất thần cả nhà ...
+url = https://www.facebook.com/58bngo.117.thai.ha/photos/-nem-nướng-phên-đặc-sản-nha-trang-em-lại-về-nem-nướng-phên-nha-trang-mời-các-bác/897465525760153/
 
 [thegioinem.com]
 match = 23.5%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -116.7%%
+title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
 
 [www.diepxuan.com]
 match = 11.1%%
