--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-23 16:21:37
+lastsearch = 2024-07-23 16:52:02
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -23.1%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -238.5%%
+title = Coco Chan (@cocopops072) • Instagram photos and videos
+url = https://www.instagram.com/cocopops072/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
