--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-23 13:21:55
+lastsearch = 2024-07-23 16:51:16
 
 [www.zillow.com]
 match = -69.2%%
@@ -585,4 +585,9 @@ url = https://www.catawbacountync.gov/
 match = -192.3%%
 title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
 url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
+
+[georgiadogs.com]
+match = 0.0%%
+title = Page Not Found (404)
+url = https://georgiadogs.com/form/18
 
