CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-23 16:16:29
+lastsearch = 2024-07-23 17:36:44
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = -193.8%%
+title = Riviu.vn | Top 3 cách giải quyết khó khăn trong công việc
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1463890147608050/
 
 [baolongan.vn]
 match = -125.0%%
@@ -122,9 +122,9 @@ title = DCINE Sóc Trăng
 url = https://www.dcine.vn/rap/dcine-soc-trang-1.html
 
 [www.facebook.com]
-match = 6.2%%
-title = Người Việt Houston
-url = https://www.facebook.com/groups/NguoiVietHouston/
+match = -256.2%%
+title = Ikaika Marzo killing it on the slack key, sharing that classic ...
+url = https://www.facebook.com/HiloPalace/videos/ikaika-marzo-killing-it-on-the-slack-key-sharing-that-classic-island-sound-for-h/554502035256925/
 
 [phatsuonline.vn]
 match = -200.0%%
@@ -183,8 +183,8 @@ url = https://minhtuanmobile.com/tin-tuc/cuu-long-thanh-trai-he-lo-lich-chieu-2-
 
 [hanoimoi.vn]
 match = -187.5%%
-title = Câu lạc bộ Phụ nữ Thủ đô tập huấn phòng, chống dịch ...
-url = https://hanoimoi.vn/cau-lac-bo-phu-nu-thu-do-tap-huan-phong-chong-dich-benh-mua-he-671654.html
+title = Chủ tịch nước Tô Lâm gặp mặt Ban liên lạc Đại đoàn 305 Dù
+url = https://hanoimoi.vn/chu-tich-nuoc-to-lam-gap-mat-ban-lien-lac-dai-doan-305-du-dac-cong-672812.html
 
 [www.pharmacity.vn]
 match = -193.8%%
@@ -222,12 +222,17 @@ title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú .
 url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-d39880.html
 
 [znews.vn]
-match = -187.5%%
-title = Joao Felix tìm thấy lối thoát cho sự nghiệp - Thể thao
-url = https://znews.vn/joao-felix-tim-thay-loi-thoat-cho-su-nghiep-post1487634.html
+match = -37.5%%
+title = 8 cầu thủ rời MU - Thể thao
+url = https://znews.vn/8-cau-thu-roi-mu-post1487807.html
 
 [www.google.com]
 match = -112.5%%
 title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+
+[suckhoedoisong.vn]
+match = -131.2%%
+title = Áp thấp nhiệt đới tan dần, mưa lớn vẫn phức tạp
+url = https://suckhoedoisong.vn/ap-thap-nhiet-doi-tan-dan-mua-lon-van-con-phuc-tap-169240723150436244.htm
 
