--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-23 15:22:56
+lastsearch = 2024-07-23 17:39:41
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,14 +17,14 @@ title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
 
 [shopee.vn]
-match = -71.4%%
-title = Bộ 1 ga chun kèm 2 vỏ gối nằm poly m6 công chúa 3d
-url = https://shopee.vn/product/7593915/46205072
+match = -114.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -57.1%%
-title = Bộ chăn ga gối trẻ em mã TE19-09 khuyến mại -30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
+match = -14.3%%
+title = Chăn ga gối Home mã H18-056 Sale 40%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = -71.4%%
-title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
-url = https://songhong.info/chan-ga-goi-micro-dn1805
+match = 9.5%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://songhong.info/chan-ga-goi-uc018
 
 [www.diepxuan.com]
 match = -33.3%%
