--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-23 17:15:36
+lastsearch = 2024-07-23 17:40:04
 
 [demxanh.com]
 match = -94.1%%
@@ -12,9 +12,9 @@ title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
 url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -100.0%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-160x190cm-33.html
 
 [thegioidemtot.vn]
 match = -58.8%%
