--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-23 16:36:00
+lastsearch = 2024-07-23 17:36:24
 
 [www.gov.uk]
 match = -200.0%%
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmyMDSPe&sig=ACfU3U0mzabqNb5BTxrsJwXq4GNSOXPu3g&hl=en&sa=X&ved=2ahUKEwi_vuOd7ryHAxWrEFkFHcu4CF0Q6AF6BAgiEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPmyNwYRi&sig=ACfU3U2EEq2iO4P5l9oBgXQfJpLJ8DS0hA&hl=en&sa=X&ved=2ahUKEwi83u7d-7yHAxWx78kDHVJjCj8Q6AF6BAgjEAM
 
 [www.nolo.com]
 match = 0.0%%
