--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-23 15:49:50
+lastsearch = 2024-07-23 17:40:52
 
 [shopee.vn]
-match = -25.0%%
-title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
-url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
