CI images update

--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-23 14:49:11
+lastsearch = 2024-07-23 17:45:32
 
 [helloviettravel.com]
 match = -181.2%%
@@ -88,8 +88,8 @@ url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-
 
 [www.klook.com]
 match = -168.8%%
-title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài - Klook
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
+title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
+url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
 match = -206.2%%
