--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-23 17:33:26
+lastsearch = 2024-07-23 17:44:48
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 21.7%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = -17.4%%
-title = Highest Volume Cryptocurrencies
-url = https://cryptoslate.com/highest-volume/
+match = 8.7%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [www.irs.gov]
 match = -78.3%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=cc40cfa443a9a9e9&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjYyI2J-7yHAxW448kDHTxqB5UQsZYEegQITBAC
+url = https://www.google.com/search?sca_esv=cc40cfa443a9a9e9&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwipxLPO_byHAxWdMEQIHbxWAhoQsZYEegQINhAC
 
 [produccionesitaca.es]
 match = -21.4%%
