CI images update

--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-07-23 16:44:50
+lastsearch = 2024-07-23 18:31:49
 
 [dreamland.vn]
-match = 18.2%%
-title = Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/
+match = 7.5%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -85,4 +85,9 @@ url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=http://xn--b1axgcdb
 match = -13.0%%
 title = Made this varsity jacket as a commission out of an old blanket ...
 url = https://www.tiktok.com/@simulatedham/video/7249167030975270149
+
+[koala.vn]
+match = 37.0%%
+title = Bộ Chăn Ga Gối Dream World DW 15-1 (120*190 cm) - Koala
+url = https://koala.vn/bo-chan-ga-goi-dream-world-dw-151.html
 
