--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 16:37:25
+lastsearch = 2024-07-23 18:31:13
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKJ1q1f&sig=ACfU3U17WrkKRBqBhoU3EzRZcReWovXOkw&hl=en&sa=X&ved=2ahUKEwi56LfG7ryHAxUoFlkFHRACBZgQ6AF6BAgdEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKK_o4c&sig=ACfU3U3cEhwppTxO0F6B55zqM9tCeYKdNA&hl=en&sa=X&ved=2ahUKEwjJ25L-h72HAxUE5ckDHbKwCaUQ6AF6BAg-EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
