--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-23 17:19:10
+lastsearch = 2024-07-23 18:26:24
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -352,9 +352,9 @@ title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
-match = -215.4%%
-title = Framework of magnetostrain responsive Ni–Mn–Ga ...
-url = https://www.nature.com/articles/s41598-023-33945-y
+match = -230.8%%
+title = 68 Ga generator based on nano-SnO 2 for PET imaging
+url = https://www.nature.com/articles/s41598-020-69659-8
 
 [www.dictionary.com]
 match = 0.0%%
