--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-23 18:14:47
+lastsearch = 2024-07-23 18:28:30
 
 [anlacphat.com]
-match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
+match = -100.0%%
+title = Đèn Led Gắn Nổi Chiếu Sâu DFB802 7W Duhal
+url = https://anlacphat.com/den-led-gan-noi-chieu-sau-dfb802-7w-duhal/
 
 [thacoanlac.vn]
-match = -55.6%%
-title = FD990-4WD
-url = https://thacoanlac.vn/forland-fd990-4wd
+match = -133.3%%
+title = FD700B
+url = https://thacoanlac.vn/forland-fd700b
 
 [vietnamese.alibaba.com]
 match = -256.2%%
