--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-23 15:21:17
+lastsearch = 2024-07-23 18:29:37
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -166.7%%
+title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
+url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -22,9 +22,9 @@ title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN MỚI NHẤT
 url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
-match = -93.3%%
-title = Ghế đá băng dài GDCV-59 - 0933832979
-url = https://ghedaviet.com/ghe-da-bang-dai-gdcv-59
+match = 6.7%%
+title = Ghế đá mài GDCV-98
+url = https://ghedaviet.com/ghe-da-mai-gdcv-98
 
 [anmoc.vn]
 match = -173.3%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -193.3%%
-title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị Trường
-url = https://ghedamienbac.com/ban-ghe-da-granito/
+match = -133.3%%
+title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
+url = https://ghedamienbac.com/ban-ghe-da/
 
 [bangheda.info]
 match = -140.0%%
