CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-23 17:44:48
+lastsearch = 2024-07-23 21:47:34
 
 [en.wikipedia.org]
-match = 21.7%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = 8.7%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = -26.7%%
+title = Ethereum Tokens
+url = https://cryptoslate.com/blockchain/ethereum/
 
 [www.irs.gov]
 match = -78.3%%
@@ -177,9 +177,9 @@ title = SLT vs VEC | VCL - Korea Split 2 | VALORANT Esports Match
 url = https://www.thespike.gg/br/match/slt-vec/120053
 
 [www.riotgames.com]
-match = -87.0%%
-title = The Events in Korea Around League of Legends Worlds ...
-url = https://www.riotgames.com/en/news/worlds-2023-events-korea
+match = -113.0%%
+title = Riot's Korea Office and the Cultural Heritage Protection ...
+url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [seacac.my-free.website]
 match = 4.3%%
