--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-23 15:23:19
+lastsearch = 2024-07-23 21:47:12
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -440,4 +440,14 @@ url = https://www.facebook.com/100050558526451/videos/nigerian-characters-don-re
 match = 0.0%%
 title = 
 url = https://gmufourthestate.com/2019/04/01/korean-age-calculation-methods-how-old-are-you/
+
+[wise.com]
+match = -110.0%%
+title = 18 South Korean wons to US dollars Exchange Rate. ...
+url = https://wise.com/us/currency-converter/krw-to-usd-rate?amount=18
+
+[www.koreanculture.org]
+match = -20.0%%
+title = Korean Cultural Center New York
+url = https://www.koreanculture.org/
 
