--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-23 17:17:37
+lastsearch = 2024-07-23 21:46:00
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -67,9 +67,9 @@ title = Đệm bông ép Everon 1m5 (1.5m) | Chính hãng, Giá tốt tại ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m5.html
 
 [shopee.vn]
-match = -109.1%%
-title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
-url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
+match = -54.5%%
+title = thảm chân giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm chân giường
 
 [www.kymdan.com]
 match = -18.2%%
