--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-23 20:03:30
+lastsearch = 2024-07-23 21:49:10
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = -61.9%%
-title = Chăn phao siêu nhẹ, Chăn phao poly siêu nhẹ giá rẻ ...
-url = https://www.lazada.vn/products/chan-phao-sieu-nhe-chan-phao-poly-sieu-nhe-gia-re-sieu-am-chan-chan-gon-chan-phao-chan-bong-chan-phao-sieu-nhe-cotton-poly-cho-mua-dong-khong-lanh-i2027238818.html
+match = -33.3%%
+title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
