--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-23 14:45:36
+lastsearch = 2024-07-23 21:45:15
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,14 +17,14 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
+match = -91.7%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên) - K-Bedding
 url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [everon.online]
-match = -8.3%%
-title = Topper Everon - Tấm Tăng Tiện Nghi
-url = https://everon.online/collections/topper-tam-tang-tien-nghi
+match = 33.3%%
+title = Tấm Trải Everon Chính Hãng
+url = https://everon.online/collections/tam-trai-everon
 
 [www.lazada.vn]
 match = -66.7%%
@@ -62,9 +62,9 @@ title = Employee-facing registry content
 url = https://my.unlv.nevada.edu/psp/lvporprd_10/EMPLOYEE/SA/e/?url=https://xn----8sba3ajj1bgg.xn--p1ai/2619387fe4fe43y
 
 [everon.com]
-match = -7.1%%
-title = Tấm bảo vệ đệm
-url = https://everon.com/san-pham/tam-bao-ve-dem
+match = 0.0%%
+title = sitemap_product_cat.xml
+url = https://everon.com/sitemap_product_cat.xml
 
 [khonem.com]
 match = -54.2%%
